src/objects/silverpop__Silverpop_Email_Campaign_Link__c.object
<CustomObject>
    <fields>
        <fullName>silverpop__Full_Silverpop_Link_Name__c</fullName>
        <label>Full Silverpop Link Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Number_of_Total_Clicks__c</fullName>
        <label>Number of Total Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Recipient_Mailing_Link_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Recipient_Mailing_Link_id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Email_Campaign_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Silverpop Email Campaign Activity</label>
        <referenceTo>silverpop__Silverpop_Email_Campaign_Activity__c</referenceTo>
        <relationshipLabel>Silverpop Email Campaign Links</relationshipLabel>
        <relationshipName>Silverpop_Email_Campaign_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>silverpop__URL__c</fullName>
        <label>URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Silverpop Email Campaign Link</label>
    <nameField>
        <label>Silverpop Email Campaign Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Silverpop Email Campaign Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>